--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/ccrhs-lamisplus
+spring.datasource.url=jdbc:postgresql://localhost:5432/lamisplus_apapa
 spring.datasource.username=postgres
-spring.datasource.password=lamis
+spring.datasource.password=admin!123
 
-
-
-
-
+##lamis api end point
+lamis.api.sync=http://localhost:8080/api/sync/
