refactor: deserialize and serialize to solved related concerns

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/ccrhs-lamisplus
+spring.datasource.url=jdbc:postgresql://localhost:5432/lamisplus-server
 spring.datasource.username=postgres
 spring.datasource.password=lamis
-
-
+server.port=8081
+hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
 # Resiliece4j Configuration
 resilience4j.circuitbreaker.configs.shared.register-health-indicator=true
 resilience4j.circuitbreaker.configs.shared.sliding-window-type=count_based
@@ -18,6 +20,7 @@ resilience4j.circuitbreaker.configs.shared.writable-stack-trace-enabled=true
 resilience4j.circuitbreaker.configs.shared.automatic-transition-from-open-to-half-open-enabled=true
 
 resilience4j.circuitbreaker.instances.example.base-config=shared
+server.url =http://localhost:8081/api/sync/
 
 
 
