--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,13 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/lamisplus_apapa
 spring.datasource.username=postgres
 spring.datasource.password=admin!123
 
+#server.port=8080
+#hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+#hibernate.show_sql=true
+#spring.jpa.hibernate.ddl-auto=update
+
 ##lamis api end point
-lamis.api.sync=http://localhost:8080/api/sync/
+lamis.api.sync=http://137.135.105.145:8081/api/sync/
+
+##lamis.api.sync=http://lamisplus.org:8081/api/sync/
+
