--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/lamisplus-server
+spring.datasource.url=jdbc:postgresql://localhost:5432/lamisplus_apapa
 spring.datasource.username=postgres
-spring.datasource.password=lamis
-server.port=8081
+spring.datasource.password=admin!123
+
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
-# Resiliece4j Configuration
+
+## Resiliece4j Configuration
 resilience4j.circuitbreaker.configs.shared.register-health-indicator=true
 resilience4j.circuitbreaker.configs.shared.sliding-window-type=count_based
 resilience4j.circuitbreaker.configs.shared.sliding-window-size=5
@@ -18,10 +19,9 @@ resilience4j.circuitbreaker.configs.shared.wait-duration-in-open-state=10s
 resilience4j.circuitbreaker.configs.shared.slow-call-duration-threshold=2s
 resilience4j.circuitbreaker.configs.shared.writable-stack-trace-enabled=true
 resilience4j.circuitbreaker.configs.shared.automatic-transition-from-open-to-half-open-enabled=true
-
 resilience4j.circuitbreaker.instances.example.base-config=shared
-server.url =http://localhost:8081/api/sync/
 
-
-
+##server.port=8081
+server.url =http://137.135.105.145:8081/api/sync/
+##server.url =http://localhost:8081/api/sync/
 
