--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	</parent>
 
 	<groupId>org.lamisplus.modules</groupId>
-	<artifactId>ndr</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<artifactId>ndr-module</artifactId>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>Ndr</name>
